@@ -369,7 +369,7 @@ rm -rf config                      # remove not needed directory
     is version-specific.</p>
 
 <p> If you have upgraded your MySQL server from a version previous to 4.1.2 to
-    version 4.1.2 or newer and if you use the pmadb/linked table infrastructure,
+    version 5.x or newer and if you use the pmadb/linked table infrastructure,
     you should run the SQL script found in
     <tt>scripts/upgrade_tables_mysql_4_1_2+.sql</tt>.</p>
 
@@ -380,8 +380,7 @@ rm -rf config                      # remove not needed directory
         where you want to give users access to their own database and don't want
         them to play around with others.<br />
         Nevertheless be aware that MS Internet Explorer seems to be really buggy
-        about cookies, at least till version 6, and PHP 4.1.1 is also a bit buggy
-        in this area!<br />
+        about cookies, at least till version 6.<br />
         Even in a <b>single-user environment</b>, you might prefer to use
         <abbr title="HyperText Transfer Protocol">HTTP</abbr> or cookie mode so
         that your user/password pair are not in clear in the configuration file.
@@ -2573,18 +2572,14 @@ setfacl -d -m "g:www-data:rwx" tmp
 <h3 id="faqserver">Server</h3>
 
 <h4 id="faq1_1">
-    <a href="#faq1_1">1.1 I'm running PHP 4+ and my server is crashing each time a specific
+    <a href="#faq1_1">1.1 My server is crashing each time a specific
     action is required or phpMyAdmin sends a blank page or a page full of
     cryptic characters to my browser, what can I do?</a></h4>
 
-<p> There are some known PHP bugs with output buffering and compression.<br />
-    Try to set the <a href="#cfg_OBGzip" class="configrule">$cfg['OBGzip']</a>
+<p> Try to set the <a href="#cfg_OBGzip" class="configrule">$cfg['OBGzip']</a>
     directive to <tt>FALSE</tt> in your <i>config.inc.php</i> file and the
     <tt>zlib.output_compression</tt> directive to <tt>Off</tt> in your php
-    configuration file.<br />
-    Furthermore, we know about such problems connected to the release
-    candidates of PHP 4.2.0 (tested with PHP 4.2.0 RC1 to RC4) together with
-    MS Internet Explorer. Please upgrade to the release version PHP 4.2.0.</p>
+    configuration file.<br /></p>
 
 <h4 id="faq1_2">
     <a href="#faq1_2">1.2 My Apache server crashes when using phpMyAdmin.</a></h4>
@@ -2597,14 +2592,7 @@ setfacl -d -m "g:www-data:rwx" tmp
     support groups.</p>
 
 <h4 id="faq1_3">
-    <a href="#faq1_3">1.3 I'm running phpMyAdmin with "cookie" authentication
-    mode under PHP 4.2.0 or 4.2.1 loaded as an Apache 2 module but can't enter the
-    script: I'm always displayed the login screen.</a></h4>
-
-<p> This is a known PHP bug (see this
-    <a href="http://bugs.php.net/bug.php?id=16626">bug report</a>) from the
-    official PHP bug database. It means there is and won't be any phpMyAdmin
-    fix against it because there is no way to code a fix.</p>
+    <a href="#faq1_3">1.3 (withdrawn).</a></h4>
 
 <h4 id="faq1_4">
     <a href="#faq1_4">1.4 Using phpMyAdmin on
@@ -2647,11 +2635,8 @@ setfacl -d -m "g:www-data:rwx" tmp
 
 <p> These features are based on the <tt>gzencode()</tt> and <tt>bzcompress()</tt>
     PHP functions to be more independent of the platform (Unix/Windows, Safe Mode
-    or not, and so on). So, you must have PHP4&nbsp;&gt;=&nbsp;4.0.4 and Zlib/Bzip2
-    support (<tt>--with-zlib</tt> and <tt>--with-bz2</tt>).<br />
-    We faced PHP crashes when trying to download a dump with MS Internet
-    Explorer when phpMyAdmin is run with a release candidate of PHP 4.2.0. In
-    this case you should switch to the release version of PHP 4.2.0.</p>
+    or not, and so on). So, you must have Zlib/Bzip2
+    support (<tt>--with-zlib</tt> and <tt>--with-bz2</tt>).<br /></p>
 
 <h4 id="faq1_8">
     <a href="#faq1_8">1.8 I cannot insert a text file in a table, and I get
@@ -2820,15 +2805,7 @@ setfacl -d -m "g:www-data:rwx" tmp
 </p>
 
 <h4 id="faq1_18">
-    <a href="#faq1_18">1.18 I'm running MySQL&nbsp;&lt;=&nbsp;4.0.1 having
-    <tt>lower_case_table_names</tt> set to 1. If I create a new table with a
-    capital letter in its name it is changed to lowercase as it should. But
-    if I try to DROP this table MySQL is unable to find the corresponding
-    file.</a></h4>
-
-<p> This is a bug of MySQL&nbsp;&lt;=&nbsp;4.0.1. Please upgrade to at least
-    MySQL&nbsp;4.0.2 or turn off your <tt>lower_case_table_names</tt>
-    directive.</p>
+    <a href="#faq1_18">1.18 (withdrawn).
 
 <h4 id="faq1_19">
     <a href="#faq1_19">1.19 I can't run the &quot;display relations&quot; feature because the
@@ -2884,11 +2861,7 @@ setfacl -d -m "g:www-data:rwx" tmp
 <pre>SHOW VARIABLES LIKE 'lower_case_table_names';</pre>
 
 <h4 id="faq1_24">
-    <a href="#faq1_24">1.24 Some characters are being truncated in my queries, or I
-    get characters randomly added. I am running PHP 4.2.3.</a></h4>
-
-<p> This is a <a href="http://bugs.php.net/bug.php?id=19404">PHP 4.2.3 bug</a>.
-    </p>
+    <a href="#faq1_24">1.24 (withdrawn).</a></h4>
 
 <h4 id="faq1_25">
     <a href="#faq1_25">1.25 I am running Apache with mod_gzip-1.3.26.1a on Windows XP,
@@ -3702,11 +3675,7 @@ $cfg['Servers'][$i]['AllowDeny']['rules'] = array(
 </a></h4>
 <p>
     MS Internet Explorer seems to be really buggy about cookies, at least till
-    version 6. And thanks to Andrew Zivolup we've traced also a PHP 4.1.1 bug
-    in this area!
-    <br />
-    Then, if you're running PHP 4.1.1, try to upgrade or downgrade... it may
-    work!
+    version 6.
 </p>
 
 <h4 id="faq5_5">
@@ -4222,11 +4191,11 @@ INSERT INTO REL_towns VALUES ('M', 'Montr&eacute;al');
 </pre>
 
 <h4 id="faq6_20">
-    <a href="#faq6_20">6.20 In MySQL 4, I see a lot of databases which are not mine, and cannot
+    <a href="#faq6_20">6.20 I see a lot of databases which are not mine, and cannot
     access them.
 </a></h4>
 
-<p> Upgrading to MySQL 4 usually gives users those global privileges: CREATE
+<p> You have one of these global privileges: CREATE
     TEMPORARY TABLES, SHOW DATABASES, LOCK TABLES. Those privileges also
     enable users to see all the database names.
     See this <a href="http://bugs.mysql.com/179">bug report</a>.<br /><br />
